# mathx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE_GUIDELINES.md  mathx.cpp  mathx.h
cmake/: mathx_GeneratePackage.cmake
cmake/templates/: mathx.pc.in
lib/: algebra.h  arithmetic.h  calculus.h  data_structures.h  extra_tools.h  int_l.h  number_theory.h  string_tools.h  trigonometry.h
mathx/: algebra.h  calculus.h  data_structures.h  geometry.h  int_l.h  number_theory.h  string_tools.h
src/: CMakeLists.txt  arithmetic.cpp  calculus.cpp  number_theory.cpp
tests/int_l/: Makefile  typeid.cpp
